--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 {% include centerpiece.html %}
 
-<div class="posts">
+<div class="row posts">
 
   {% for post in site.posts %}
   <div class="row post">
