--- a/cv/index.html
+++ b/cv/index.html
@@ -20,9 +20,9 @@
 			<div class="menu-panel">
 				<h3>Table of Contents</h3>
 				<ul id="menu-toc" class="menu-toc">
-				    <li class="menu-toc-current"><a href="http://tnedich.github.io/">Home</a></li>
+				        <li><a href="http://tnedich.github.io/">Home</a></li>
 					<li class="menu-toc-current"><a href="#item1">Mechanical engineering</a></li>
-					<li><a href="#item2">Programming</a></li>
+					<li class="menu-toc-current"><a href="#item2">Programming</a></li>
 					
 				</ul>
 			
