--- a/cv/index.html
+++ b/cv/index.html
@@ -19,8 +19,9 @@
 
 			<div class="menu-panel">
 				<h3>Table of Contents</h3>
+				<p><a href="http://tnedich.github.io/">Home</a></p>
 				<ul id="menu-toc" class="menu-toc">
-				        <li><a href="http://tnedich.github.io/">Home</a></li>
+				        
 					<li class="menu-toc-current"><a href="#item1">Mechanical engineering</a></li>
 					<li class="menu-toc-current"><a href="#item2">Programming</a></li>
 					
