--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,10 @@
 
 			<div class="menu-panel">
 				<h3>Table of Contents</h3>
-				<p><a href="http://tnedich.github.io/">Home</a></p>
+				<ul>
+				  <li><a href="http://tnedich.github.io/">Home</a></li>	
+				</ul>
+			
 				<ul id="menu-toc" class="menu-toc">
 				        
 					<li class="menu-toc-current"><a href="#item1">Mechanical engineering</a></li>
