--- a/cv/index.html
+++ b/cv/index.html
@@ -19,7 +19,7 @@
 
 			<div class="menu-panel">
 				<h3>Table of Contents</h3>
-				<ul>
+				<ul class="my-menu">
 				  <li><a href="http://tnedich.github.io/">Home</a></li>	
 				</ul>
 			
