--- a/cv/index.html
+++ b/cv/index.html
@@ -37,7 +37,7 @@
 					<div class="bb-item" id="item1">
 						<div class="content">
 							<div class="scroller">
-								<h2>Test</h2>
+								<h2>Mechanical engineering</h2>
 								<p>The Hon. Francis Gillette, in a speech in Hartford, Conn., in 1871, said
 								that there was "in Connecticut, on an average, one liquor shop to every
 								forty voters, and three to every Christian church. In this city, as stated
@@ -95,7 +95,7 @@
 					<div class="bb-item" id="item2">
 						<div class="content">
 							<div class="scroller">
-								<h2>Why we die</h2>
+								<h2>Programming and development</h2>
 								<p>But few of the human race die of old age. Besides the thousand and one
 								diseases flesh is heir to, and the disease which Mrs. O'Flannagan said her
 								husband died of, viz., "Of a Saturday 'tis that poor Mike died," very many
